# AgenticAI

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
agentic_ai/: agent.py  config.py  llm.py  memory.py  tools.py
agentic_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: demo_cli.py
tests/: test_tools.py
