[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai"
version = "0.1.0"
description = "Minimal agentic AI with OpenAI tool-calling"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Rohit Raj Saji"}]
dependencies = [
  "openai>=1,<2",
  "pydantic>=2,<3",
  "httpx>=0.27,<0.28",
  "tenacity>=8,<9",
  "rich>=13,<14",
  "click>=8,<9",
  "duckduckgo-search>=6,<7",
  "beautifulsoup4>=4,<5",
  "lxml>=5,<7",
]

[tool.setuptools.packages.find]
include = ["agentic_ai"]
